# 2D-Platformer

./: CMakeLists.txt
src/: game.cpp  game.h  game_objects.cpp  game_objects.h  level1.txt  loaders.cpp  loaders.h  log_utils.cpp  log_utils.h  logging.h  main.cpp  managers.cpp  managers.h  options.h  pch.h  scenes.cpp  scenes.h  tilemap.cpp  tilemap.h
